--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,7 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,linux,jupyternotebooks
+
+data/
+logs/
+_cache*
